--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Paaryn Photography - Capturing Light, Telling Stories">
   <title>Paaryn Photography</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Open+Sans&display=swap" rel="stylesheet">
+  <img image=Image_13-05-2024.jpg rel="stylesheet">
   <style>
     body {
       margin: 0;
