--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Paaryn Photography - Capturing Light, Telling Stories">
   <title>Paaryn Photography</title>
-  <img image=Image_13-05-2024.jpg rel="stylesheet">
+  <img src=Image_13-05-2024.jpg >
   <style>
     body {
       margin: 0;
