--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Paaryn Photography - Capturing Light, Telling Stories">
   <title>Paaryn Photography</title>
-  <img src=Image_13-05-2024.jpg >
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -14,7 +14,7 @@
       color: #333;
     }
     header {
-      background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e') center/cover no-repeat;
+      background: <img src=Image_13-05-2024.jpg > center/cover no-repeat;
       color: white;
       height: 100vh;
       display: flex;
