--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       color: #333;
     }
     header {
-      background: <img src=Image_13-05-2024.jpg > center/cover no-repeat;
+      background-image: url(Image_13-05-2024.jpg);
       color: white;
       height: 100vh;
       display: flex;
@@ -70,7 +70,7 @@
     </section>
     <section>
       <h2>Stay Connected</h2>
-      <p>Follow along or reach out via email: <a href="mailto:hello@paarynphotography.com">hello@paarynphotography.com</a></p>
+      <p>Follow along or reach out via email: <a href="paarynv@gmail.com">paarynv@gmail.com</a></p>
     </section>
   </main>
   <footer>
