--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       color: #333;
     }
     header {
-      background-image: url(Image_13-05-2024.jpg);
+      background-image: url(https://cdn.shopify.com/s/files/1/0641/1596/6124/files/Color_Cyan.jpg?v=1713871560);
       color: white;
       height: 100vh;
       display: flex;
