--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="description" content="Paaryn Photography - Capturing Light, Telling Stories">
   <title>Paaryn Photography</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Open+Sans&display=swap" rel="stylesheet">
+  <header>
+  <img src="https://github.com/paarynv/paarynphotography/raw/main/Image_13-05-2024.jpg" alt="Paaryn Photography">
+  <h1>Paaryn Photography</h1>
+  <p>Capturing Light. Telling Stories. More coming soon.</p>
+</header>
   <style>
     body {
       margin: 0;
