--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
   <meta name="description" content="Paaryn Photography - Capturing Light, Telling Stories">
   <title>Paaryn Photography</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Open+Sans&display=swap" rel="stylesheet">
-  <header>
-  <img src="https://github.com/paarynv/paarynphotography/raw/main/Image_13-05-2024.jpg" alt="Paaryn Photography">
-  <h1>Paaryn Photography</h1>
-  <p>Capturing Light. Telling Stories. More coming soon.</p>
-</header>
   <style>
     body {
       margin: 0;
@@ -19,7 +14,7 @@
       color: #333;
     }
     header {
-      background-image: url(https://github.com/paarynv/paarynphotography/raw/main/Image_13-05-2024.jpg);
+      background-image: url('https://github.com/paarynv/paarynphotography/raw/main/Image_13-05-2024.jpg');
       color: white;
       height: 100vh;
       display: flex;
@@ -28,6 +23,8 @@
       align-items: center;
       text-align: center;
       padding: 0 20px;
+      background-size: cover;
+      background-position: center;
     }
     header h1 {
       font-family: 'Playfair Display', serif;
@@ -75,7 +72,7 @@
     </section>
     <section>
       <h2>Stay Connected</h2>
-      <p>Follow along or reach out via email: <a href="paarynv@gmail.com">paarynv@gmail.com</a></p>
+      <p>Follow along or reach out via email: <a href="mailto:paarynv@gmail.com">paarynv@gmail.com</a></p>
     </section>
   </main>
   <footer>
