--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <main>
     <section>
       <h2>Welcome</h2>
-      <p>Hi, I'm Paaryn — a photographer and physics tutor with a passion for light, composition, and storytelling. This site will soon showcase my portfolio, photography services, and educational resources.</p>
+      <p>Hi, I'm Paaryn — a photographer, engineer, and physics tutor with a passion for light, composition, and storytelling. This site will soon showcase my portfolio, photography services, and educational resources.</p>
     </section>
     <section>
       <h2>Stay Connected</h2>
