--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <nav>
+<head>
+  <html lang="en">
+    <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About Me</a>
   </nav>
-<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Paaryn Photography - Capturing Light, Telling Stories">
