--- a/about.html
+++ b/about.html
@@ -47,7 +47,8 @@
       height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-end;
+      padding-bottom: 100px;
       align-items: center;
       text-align: center;
       padding: 0 20px;
@@ -91,6 +92,7 @@
 <body>
   <header>
     <h1>About</h1>
+    
   </header>
   <main>
     <section>
