--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
       height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
-      padding-bottom: 1000px;
+      justify-content: center;
+      padding-top: 100px;
       align-items: center;
       text-align: center;
       padding: 0 20px;
@@ -91,13 +91,20 @@
 </head>
 <body>
   <header>
-    <h1>About</h1>
+    <h1>About Me</h1>
     
   </header>
   <main>
     <section>
       <h2>Who Am I?</h2>
-      <p>Hi, I'm Paaryn — a photographer, engineer, and physics tutor with a passion for light, composition, and storytelling. This site will soon showcase my portfolio, photography services, and educational resources.</p>
+      <p>
+        My journey can be explained through two strands of life that eventually merged to form a passion for photography. 
+
+        On the one hand, I have loved wildlife since I was a child... wandering around the garden for insects from a young age, capturing spiders to keep in a vivarium, and eventually purchasing my very own corn snake aged 14 - Nala. Our family holidays became more and more countryside-focussed, and I quickly outgrew the family digital "point-and-shoot" camera.  
+
+        In 2022, I was gifted an entry-level DSRL: my trusty Canon EOS2000D! 
+        
+      </p>
     </section>
   </main>
   <footer>
