--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding-top: 100px;
+      padding-top: 300px;
       align-items: center;
       text-align: center;
       padding: 0 20px;
@@ -102,9 +102,11 @@
 
         On the one hand, I have loved wildlife since I was a child... wandering around the garden for insects from a young age, capturing spiders to keep in a vivarium, and eventually purchasing my very own corn snake aged 14 - Nala. Our family holidays became more and more countryside-focussed, and I quickly outgrew the family digital "point-and-shoot" camera.  
 
-        In 2022, I was gifted an entry-level DSRL: my trusty Canon EOS2000D! 
-        
+        In 2022, I was gifted an entry-level DSRL: my trusty Canon EOS2000D! Since then, my journey into photography grew exponentially, growing my set of lenses, accessories, and skillset on a pretty low budget.
+
+        Simultaneously, I graduated with a First Class degree in Physics in 2023 with experience working with lenses and fibre optics in the context of atomic clocks and quantum gravity sensors! Naturally, this led me into the field of electro-optics engineering, where understanding the physics of cameras is crucial.
       </p>
+      
     </section>
   </main>
   <footer>
