--- a/about.html
+++ b/about.html
@@ -43,17 +43,18 @@
     }
     header {
       background-image: url('https://github.com/paarynv/paarynphotography/raw/main/insect.jpg');
-      color: white;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      padding-top: 60vh;
-      align-items: center;
-      text-align: center;
-      padding: 0 20px;
       background-size: cover;
       background-position: center;
+      color: white;
+      height: 100vh;
+      position: relative;
+    }
+    header .content {
+      position: absolute;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
     }
     header h1 {
       font-family: 'Playfair Display', serif;
@@ -91,9 +92,11 @@
 </head>
 <body>
   <header>
-    <h1>About Me</h1>
-    
+    <div class="content">
+      <h1>About Me</h1>
+    </div>    
   </header>
+  
   <main>
     <section>
       <h2>My Story</h2>
