--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
         My Services
       </h2>
       <p>
-        This leads me to now. I have a set of technical and people skills that allow me to serve your photography needs through a course (in development): from historical context, the underlying physics and, of course, practical 1-1 support on how you can become a better photographer. Having tutored A-level Physics for over 5 years, 
+        This leads me to now. I have a set of technical and people skills that allow me to serve your photography needs through a course (in development): from historical context, the underlying physics and, of course, practical 1-1 support on how you can become a better photographer. 
       </p>
     
     </section>
