--- a/about.html
+++ b/about.html
@@ -48,6 +48,13 @@ y <!DOCTYPE html>
       color: white;
       height: 100vh;
       position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 0 20px;
+      background-size: cover;
+      background-position: center;
     }
     header .content {
       position: absolute;
