--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
       </p>
 
       <p>
-        And, crucially, I take pride in having 5+ years of experience tutoring 20+ students through A-level physis, having delivered 500+ hours of tutoring with several platforms and companies. Tutoring is how I have been able to serve society over the past half a decade. Through this work I have gained excellent insight into working with individuals 1-1 to help them reach their goals. See my <a href="https://paarynv.wixsite.com/itsjustphysics">Personal Tutoring Site</a> for more.
+        And, crucially, I take pride in having 5+ years of experience tutoring 20+ students through A-level Physics, having delivered 500+ hours of tutoring with several platforms and companies. Tutoring is how I have been able to serve society over the past half a decade. Through this work I have gained excellent insight into working with individuals 1-1 to help them reach their goals. See my <a href="https://paarynv.wixsite.com/itsjustphysics">Personal Tutoring Site</a> for more.
       </p>
       
     </section>
